--- a/06._DogInder/public/pages/matches/matches.html
+++ b/06._DogInder/public/pages/matches/matches.html
@@ -1,31 +1,17 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="stylesheet" href="/assets/css/main.css">
-        <link rel="stylesheet" href="/pages/matches/matches.css">
-        
-        <!--logoet oppe i tabbene-->
-        <link rel="icon" href="/assets/images/logo.png">
-    <title>Matches</title>
-</head>
-<body>
 
-    <nav>
-    <a href="/"><img id="logo" src="/assets/images/logo.png" alt="doginder logo"> </a> 
-    <a href="/matches">Matches</a>
-</nav>
-<main>
-    <h1>Matches</h1>
+    <link rel="stylesheet" href="/pages/matches/matches.css">
+
+    <h3>Matches</h3>
+
+    <h2 id="dog-matches-name"></h2>
+    <h3 id="dog-matches-bio"></h3>
+    <h6 id="dog-matches-address"></h6>
+    <h5 id="dog-matches-city"></h5>
+
     <div id="dog-matches-image-container"></div>
-    </main>
 
-    <footer>
-    <p>Copyright <span id="copyright-year"></span></p>
-</footer>
+    <!-- Firefox has problems with detecting dragend: https://github.com/hammerjs/hammer.js/issues/692 -->
+    <!-- Don't upgrade beyond version 2.0.1 https://github.com/hammerjs/hammer.js/releases/tag/2.0.1 -->
+    <script src="/pages/matches/hammer.js"></script>
 
-<script src="/assets/js/footer.js"></script>
-<script src="./pages/matches/matches.js"></script>
-</body>
-</html>
+    <script src="./pages/matches/matches.js"></script>
