--- a/10._Real_Estate_Market/client/index.html
+++ b/10._Real_Estate_Market/client/index.html
@@ -2,9 +2,9 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/icons8-house-16.png" />
+    <link rel="icon" type="image/svg+xml" href="/icons8-house-16.png" /> <!--Ændre -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Real Estate Market</title>
+    <title>Real Estate Market</title> <!--Ændre -->
   </head>
   <body>
     <div id="app"></div>
